--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 
 # ignore ALL files in ANY directory named chrome-win64
 chrome-win64/
+
+# ignore ALL files in ANY directory named .vscode
+.vscode
